--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>Praca_Inżynierska</groupId>
     <artifactId>RMS</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+<dependencies><!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.6</version>
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
 </project>
