--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Praca_Inżynierska</groupId>
+    <groupId>Praca_Inzynierska</groupId>
     <artifactId>RMS</artifactId>
     <version>1.0-SNAPSHOT</version>
 <dependencies><!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -12,7 +12,6 @@
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.18.6</version>
-        <scope>provided</scope>
     </dependency>
 </dependencies>
 </project>
